# ColorDetect

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  color_detect.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: codecov.yml  lint.yml  package-tests.yml  python-app.yml
colordetect/: __init__.py  col_share.py  color_detect.py  colour_segmentation.py  video_color_detect.py
docs/: colordetect.rst  colshare.rst  conf.py  developer_notes.rst  getting_started.rst  index.rst  misc.rst  modules.rst  segmentation.rst  videocolor.rst
images/: .gitignore
requirements/: requirements-base.txt  requirements-dev.txt
src/: color_detect.py
src/colordetect/: __init__.py  col_share.py  color_detect.py  video_color_detect.py
tests/: conftest.py  test_functional.py  test_functional2.py  test_unit.py
