[build-system]
requires      = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ColorDetect"
dynamic = ["version"]
description = "Detect and recognize colors in images or video"
readme = "README.md"
authors = [
    { name = "Marvin Kweyu", email = "mkweyu1@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ColorDetect", "color recognition","images", "video"]
dependencies = [
    "numpy>=1.18.1",
    "matplotlib>=3.2.1",
    "opencv-python>=4.2.0.32",
    "scikit-learn>=0.22.2.post1",
    "webcolors>=1.11.1"
]
requires-python = ">=3.6"
[tool.setuptools]
tests = [
    "tests/",
    "*tests\\",
]

[project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "flake8","bumpver", "isort", "mypy", "pytest"]

[project.urls]
    repository    = "https://github.com/MarvinKweyu/ColorDetect"
    documentation = "https://colordetect.readthedocs.io"