[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "ColorDetect"
version = "1.6.5"
authors = [
    {name = "Marvin Kweyu", email = "hello@marvinkweyu.net"},
]
description = "Detect and recognize colors in images or video"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.18.1",
    "matplotlib>=3.2.1",
    "opencv-python>=4.2.0.32",
    "scikit-learn>=0.22.2.post1",
    "webcolors>=1.11.1",
]

[project.urls]
Homepage = "https://github.com/MarvinKweyu/ColorDetect"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
